--- a/charts/microservice-chart/templates/beta-secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/beta-secretproviderclass-kv.yaml
@@ -3,6 +3,7 @@ apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: {{ include "microservice-chart.fullnameCanaryDelivery" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "microservice-chart.labelsCanaryDelivery" . | nindent 4 }}
 spec:
@@ -15,7 +16,13 @@ spec:
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
       {{- end }}
-  parameters:
+      {{- if .Values.canaryDelivery.deployment.fileShare.create }}
+      - key: azurestorageaccountname
+        objectName: azurestorageaccountname
+      - key: azurestorageaccountkey
+        objectName: azurestorageaccountkey
+      {{- end }}
+  parameters
     usePodIdentity: "true"
     useVMManagedIdentity: "false"
     userAssignedIdentityID: ""
@@ -27,6 +34,16 @@ spec:
         {{- range $key, $objectName := .Values.canaryDelivery.deployment.envSecret }}
         - |
           objectName: {{ $objectName }}
+          objectType: secret
+          objectVersion: ""
+        {{- end }}
+        {{- if .Values.canaryDelivery.deployment.fileShare.create }}
+        - |
+          objectName: azurestorageaccountname
+          objectType: secret
+          objectVersion: ""
+        - |
+          objectName: azurestorageaccountkey
           objectType: secret
           objectVersion: ""
         {{- end }}
