--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -48,11 +48,29 @@ spec:
 {{ toYaml .Values.readinessProbe | indent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if .Values.envSecret }}
+          {{- if or .Values.envSecret .Values.fileConfig .Values.fileShare.create }}
           volumeMounts:
+            - name: tmp
+              mountPath: /tmp
+            {{- if .Values.envSecret }}
             - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
               readOnly: true
+            {{- end }}
+            {{- if .Values.fileConfig }}
+            {{- range $key, $val := .Values.fileConfig }}
+            - name: file-config
+              mountPath: "/mnt/file-config/{{ $key }}"
+              subPath: {{ $key }}
+              readOnly: true
+            {{- end }}
+            {{- end }}
+            {{- if .Values.fileShare.create }}
+            {{- range $k, $v := .Values.fileShare.folders }}
+            - name: file-azure-{{ $v.name }}
+              mountPath: "/mnt/file-azure/{{ $v.name }}"
+            {{- end }}
+            {{- end }}
           {{- end }}
           env:
             #secrets
@@ -71,6 +89,13 @@ spec:
                   name: {{ include "microservice-chart.fullname" $ }}
                   key: {{ $key }}
             {{- end }}
+            #field ref
+            {{- range $key, $val := .Values.envFieldRef }}
+            - name: {{ $key }}
+              valueFrom:
+                fieldRef:
+                  fieldPath: {{ $val }}
+            {{- end }}
             #external configmap values
             {{- range $key, $valMap := .Values.envConfigMapExternals }}
             {{- range $internKey, $internVal := $valMap }}
@@ -85,6 +110,20 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       volumes:
+        - name: tmp
+          emptyDir: {}
+        {{- if .Values.fileShare.create }}
+        {{- range $k, $v := .Values.fileShare.folders }}
+        - name: file-azure-{{ $v.name }}
+          csi:
+            driver: file.csi.azure.com
+            readOnly: {{ $v.readOnly }}
+            volumeAttributes:
+              secretName: {{ include "microservice-chart.fullname" $ }}
+              shareName: {{ $v.name }}
+              mountOptions: {{ $v.mountOptions }}
+        {{- end }}
+        {{- end }}
         {{- if .Values.envSecret }}
         - name: secrets-store-inline
           csi:
@@ -92,6 +131,17 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: {{ include "microservice-chart.fullname" $ }}
+        {{- end }}
+        {{- if .Values.fileConfig }}
+        - name: file-config
+          configMap:
+            name: {{ include "microservice-chart.fullname" $ }}
+            defaultMode: 420
+            items:
+          {{- range $key, $val := .Values.fileConfig }}
+              - key: {{ $key }}
+                path: {{ $key }}
+          {{- end }}
         {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
