--- a/charts/microservice-chart/templates/secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass-kv.yaml
@@ -3,6 +3,7 @@ apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: {{ include "microservice-chart.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "microservice-chart.labels" . | nindent 4 }}
 spec:
@@ -14,6 +15,12 @@ spec:
       {{- range $key, $objectName := .Values.envSecret }}
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
+      {{- end }}
+      {{- if .Values.fileShare.create }}
+      - key: azurestorageaccountname
+        objectName: azurestorageaccountname
+      - key: azurestorageaccountkey
+        objectName: azurestorageaccountkey
       {{- end }}
   parameters:
     usePodIdentity: "true"
@@ -27,6 +34,16 @@ spec:
         {{- range $key, $objectName := .Values.envSecret }}
         - |
           objectName: {{ $objectName }}
+          objectType: secret
+          objectVersion: ""
+        {{- end }}
+        {{- if .Values.fileShare.create }}
+        - |
+          objectName: azurestorageaccountname
+          objectType: secret
+          objectVersion: ""
+        - |
+          objectName: azurestorageaccountkey
           objectType: secret
           objectVersion: ""
         {{- end }}
