--- a/charts/microservice-chart/templates/beta-deployment.yaml
+++ b/charts/microservice-chart/templates/beta-deployment.yaml
@@ -48,7 +48,7 @@ spec:
 {{ toYaml .Values.readinessProbe | indent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if or .Values.envSecret .Values.fileConfig .Values.fileShare.create }}
+          {{- if or .Values.envSecret .Values.fileConfig .Values.fileShare.create .Values.fileConfigExternals.create }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -65,6 +65,14 @@ spec:
               readOnly: true
             {{- end }}
             {{- end }}
+            {{- if .Values.fileConfigExternals.create }}
+            {{- range $k, $v := .Values.fileConfigExternals.configMaps }}
+            - name: file-config-external-{{ $v.name }}
+              mountPath: "/mnt/file-config-external/{{ $v.name }}/{{ $v.key }}"
+              subPath: {{ $v.key }}
+              readOnly: true
+            {{- end }}
+            {{- end }}
             {{- if .Values.fileShare.create }}
             {{- range $k, $v := .Values.fileShare.folders }}
             - name: file-azure-{{ $v.name }}
@@ -78,7 +86,7 @@ spec:
             {{- end }}
             {{- end }}
           {{- end }}
-          {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileConfig .Values.canaryDelivery.deployment.fileShare.create }}
+          {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileConfig .Values.canaryDelivery.deployment.fileShare.create .Values.canaryDelivery.deployment.fileConfigExternals.create }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -95,9 +103,17 @@ spec:
               readOnly: true
             {{- end }}
             {{- end }}
+            {{- if .Values.canaryDelivery.deployment.fileConfigExternals.create }}
+            {{- range $k, $v := .Values.canaryDelivery.deployment.fileConfigExternals.configMaps }}
+            - name: beta-file-config-external-{{ $v.name }}
+              mountPath: "/mnt/beta-file-config-external/{{ $v.name }}/{{ $v.key }}"
+              subPath: {{ $v.key }}
+              readOnly: true
+            {{- end }}
+            {{- end }}
             {{- if .Values.canaryDelivery.deployment.fileShare.create }}
             {{- range $k, $v := .Values.canaryDelivery.deployment.fileShare.folders }}
-            - name: file-azure-{{ $v.name }}
+            - name: beta-file-azure-{{ $v.name }}
               csi:
                 driver: file.csi.azure.com
                 readOnly: {{ $v.readOnly }}
@@ -168,6 +184,30 @@ spec:
       volumes:
         - name: tmp
           emptyDir: {}
+        {{- if .Values.fileShare.create }}
+        {{- range $k, $v := .Values.fileShare.folders }}
+        - name: file-azure-{{ $v.name }}
+          csi:
+            driver: file.csi.azure.com
+            readOnly: {{ $v.readOnly }}
+            volumeAttributes:
+              secretName: {{ include "microservice-chart.fullname" $ }}
+              shareName: {{ $v.name }}
+              mountOptions: {{ $v.mountOptions }}
+        {{- end }}
+        {{- end }}
+        {{- if .Values.canaryDelivery.deployment.fileShare.create }}
+        {{- range $k, $v := .Values.canaryDelivery.deployment.fileShare.folders }}
+        - name: beta-file-azure-{{ $v.name }}
+          csi:
+            driver: file.csi.azure.com
+            readOnly: {{ $v.readOnly }}
+            volumeAttributes:
+              secretName: {{ include "microservice-chart.fullnameCanaryDelivery" $ }}
+              shareName: {{ $v.name }}
+              mountOptions: {{ $v.mountOptions }}
+        {{- end }}
+        {{- end }}
         {{- if .Values.canaryDelivery.deployment.envSecret }}
         - name: beta-secrets-store-inline
           csi:
@@ -205,6 +245,28 @@ spec:
               - key: {{ $key }}
                 path: {{ $key }}
           {{- end }}
+        {{- end }}
+        {{- if .Values.fileConfigExternals.create }}
+        {{- range $k, $v := .Values.fileConfigExternals.configMaps }}
+        - name: file-config-external-{{ $v.name }}
+          configMap:
+            name: {{ $v.name }}
+            defaultMode: 420
+            items:
+              - key: {{ $v.key }}
+                path: {{ $v.key }}
+        {{- end }}
+        {{- end }}
+        {{- if .Values.canaryDelivery.deployment.fileConfigExternals.create }}
+        {{- range $k, $v := .Values.canaryDelivery.deployment.fileConfigExternals.configMaps }}
+        - name: beta-file-config-external-{{ $v.name }}
+          configMap:
+            name: {{ $v.name }}
+            defaultMode: 420
+            items:
+              - key: {{ $v.key }}
+                path: {{ $v.key }}
+        {{- end }}
         {{- end }}
       restartPolicy: {{ .Values.restartPolicy }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
