--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -48,7 +48,7 @@ spec:
 {{ toYaml .Values.readinessProbe | indent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if or .Values.envSecret .Values.fileConfig .Values.fileShare.create }}
+          {{- if or .Values.envSecret .Values.fileConfig .Values.fileShare.create .Values.fileConfigExternals.create }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -62,6 +62,14 @@ spec:
             - name: file-config
               mountPath: "/mnt/file-config/{{ $key }}"
               subPath: {{ $key }}
+              readOnly: true
+            {{- end }}
+            {{- end }}
+            {{- if .Values.fileConfigExternals.create }}
+            {{- range $k, $v := .Values.fileConfigExternals.configMaps }}
+            - name: file-config-external-{{ $v.name }}
+              mountPath: "/mnt/file-config-external/{{ $v.name }}/{{ $v.key }}"
+              subPath: {{ $v.key }}
               readOnly: true
             {{- end }}
             {{- end }}
@@ -142,6 +150,17 @@ spec:
               - key: {{ $key }}
                 path: {{ $key }}
           {{- end }}
+        {{- end }}
+        {{- if .Values.fileConfigExternals.create }}
+        {{- range $k, $v := .Values.fileConfigExternals.configMaps }}
+        - name: file-config-external-{{ $v.name }}
+          configMap:
+            name: {{ $v.name }}
+            defaultMode: 420
+            items:
+              - key: {{ $v.key }}
+                path: {{ $v.key }}
+        {{- end }}
         {{- end }}
       restartPolicy: {{ .Values.restartPolicy }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
