fix configMaps in case of empty values

--- a/charts/microservice-chart/templates/configmap.yaml
+++ b/charts/microservice-chart/templates/configmap.yaml
@@ -7,8 +7,12 @@ metadata:
   labels:
     {{- include "microservice-chart.labels" . | nindent 4 }}
 data:
+  {{- if .Values.envConfig -}}
   {{- toYaml .Values.envConfig | nindent 2 }}
+  {{- end }}
+  {{- if .Values.fileConfig -}}
   {{- toYaml .Values.fileConfig | nindent 2 }}
+  {{- end }}
 {{- end }}
 
 ---
