--- a/charts/microservice-chart/templates/beta-configmap.yaml
+++ b/charts/microservice-chart/templates/beta-configmap.yaml
@@ -7,6 +7,10 @@ metadata:
   labels:
     {{- include "microservice-chart.labelsCanaryDelivery" . | nindent 4 }}
 data:
+  {{- if .Values.canaryDelivery.deployment.envConfig -}}
   {{- toYaml .Values.canaryDelivery.deployment.envConfig | nindent 2 }}
+  {{- end }}
+  {{- if .Values.canaryDelivery.deployment.fileConfig -}}
   {{- toYaml .Values.canaryDelivery.deployment.fileConfig | nindent 2 }}
+  {{- end }}
 {{- end }}
