fix typo in beta-secretprovideclass-kv

--- a/charts/microservice-chart/templates/beta-secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/beta-secretproviderclass-kv.yaml
@@ -22,7 +22,7 @@ spec:
       - key: azurestorageaccountkey
         objectName: azurestorageaccountkey
       {{- end }}
-  parameters
+  parameters:
     usePodIdentity: "true"
     useVMManagedIdentity: "false"
     userAssignedIdentityID: ""
