--- a/examples/spring-boot-app-bar-latest/helm/values-devopslab-dev.yaml
+++ b/examples/spring-boot-app-bar-latest/helm/values-devopslab-dev.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: ""
 
   canaryDelivery:
-    create: false
+    create: true
     ingress:
       create: true
       canary:
@@ -90,7 +90,7 @@ microservice-chart:
   resources:
     requests:
       memory: "256Mi"
-      cpu: "40m"
+      cpu: "150m"
     limits:
       memory: "256Mi"
       cpu: "150m"
