fix version and labels

--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -24,7 +24,7 @@ spec:
         redeploy: {{ now | unixEpoch | quote }}
         {{- end }}
         aadpodidbinding: "{{ .Values.namespace }}-pod-identity"
-        {{- include "microservice-chart.selectorLabels" . | nindent 8 }}
+        {{- include "microservice-chart.labels" . | nindent 8 }}
     spec:
       automountServiceAccountToken: false
       serviceAccountName: {{ include "microservice-chart.serviceAccountName" . }}
