--- a/examples/spring-boot-app-bar-latest/helm/values-devopslab-dev.yaml
+++ b/examples/spring-boot-app-bar-latest/helm/values-devopslab-dev.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: ""
 
   canaryDelivery:
-    create: true
+    create: false
     ingress:
       create: true
       canary:
@@ -30,7 +30,7 @@ microservice-chart:
 
   deployment:
     create: true
-    replicas: 4
+    replicas: 1
 
   envConfig:
     APP: foo
@@ -89,11 +89,11 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "256Mi"
+      memory: "128Mi"
       cpu: "150m"
     limits:
       memory: "256Mi"
-      cpu: "150m"
+      cpu: "300m"
 
   autoscaling:
     enable: false
