--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -106,6 +106,11 @@ sidecars: []
 livenessProbe:
   # -- httpGet will be put as is into deployment yaml
   # @default -- -
+  handlerType: httpGet #httpGet|tcpSocket
+
+  tcpSocket:
+    port: 80
+
   httpGet:
     # -- Live (health) path used by app
     path: /healthz/live
@@ -121,6 +126,11 @@ livenessProbe:
 readinessProbe:
   # -- httpGet will be put as is into deployment yaml
   # @default -- -
+  handlerType: httpGet #httpGet|tcpSocket
+
+  tcpSocket:
+    port: 80
+
   httpGet:
     # -- Ready (health) path used by app
     path: /healthz/ready
