--- a/charts/microservice-chart/templates/beta-secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/beta-secretproviderclass-kv.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.canaryDelivery.create .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.secretProviderClass.create -}}
+{{- if and .Values.canaryDelivery.create .Values.canaryDelivery.secretProviderClass.create (or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileShare.create) -}}
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
