--- a/charts/microservice-chart/templates/secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass-kv.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.envSecret .Values.secretProviderClass.create -}}
+{{- if and .Values.secretProviderClass.create (or .Values.envSecret .Values.fileShare.create) -}}
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
