--- a/charts/microservice-chart/templates/beta-deployment.yaml
+++ b/charts/microservice-chart/templates/beta-deployment.yaml
@@ -106,7 +106,6 @@ spec:
             {{- end }}
             {{- end }}
           {{- end }}
-          {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileConfig .Values.canaryDelivery.deployment.fileShare.create .Values.canaryDelivery.deployment.fileConfigExternals.create }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -116,7 +115,7 @@ spec:
               readOnly: true
             {{- end }}
             {{- if .Values.canaryDelivery.deployment.fileConfig }}
-            {{- range $key, $val := .Values.fileConfig }}
+            {{- range $key, $val := .Values.canaryDelivery.deployment.fileConfig }}
             - name: beta-file-config
               mountPath: "/mnt/beta-file-config/{{ $key }}"
               subPath: {{ $key }}
@@ -133,17 +132,10 @@ spec:
             {{- end }}
             {{- if .Values.canaryDelivery.deployment.fileShare.create }}
             {{- range $k, $v := .Values.canaryDelivery.deployment.fileShare.folders }}
-            - name: beta-file-azure-{{ $v.name }}
-              csi:
-                driver: file.csi.azure.com
-                readOnly: {{ $v.readOnly }}
-                volumeAttributes:
-                  secretName: {{ include "microservice-chart.fullnameCanaryDelivery" $ }}
-                  shareName: {{ $v.name }}
-                  mountOptions: {{ $v.mountOptions }}
+            - name: file-azure-{{ $v.name }}
+              mountPath: "/mnt/beta-file-azure/{{ $v.name }}"
             {{- end }}
             {{- end }}
-          {{- end }}
           env:
             # secrets from deployment
             {{- range $name, $value := .Values.envSecret }}
@@ -228,14 +220,6 @@ spec:
               mountOptions: {{ $v.mountOptions }}
         {{- end }}
         {{- end }}
-        {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileShare.create }}
-        - name: beta-secrets-store-inline
-          csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: {{ include "microservice-chart.fullnameCanaryDelivery" $ }}
-        {{- end }}
         {{- if or .Values.envSecret .Values.fileShare.create }}
         - name: secrets-store-inline
           csi:
@@ -243,6 +227,14 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: {{ include "microservice-chart.fullname" $ }}
+        {{- end }}
+        {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileShare.create }}
+        - name: beta-secrets-store-inline
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: {{ include "microservice-chart.fullnameCanaryDelivery" $ }}
         {{- end }}
         {{- if .Values.fileConfig }}
         - name: file-config
