--- a/charts/microservice-chart/templates/beta-deployment.yaml
+++ b/charts/microservice-chart/templates/beta-deployment.yaml
@@ -68,7 +68,6 @@ spec:
             periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if or .Values.envSecret .Values.fileConfig .Values.fileShare.create .Values.fileConfigExternals.create }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -77,10 +76,23 @@ spec:
               mountPath: "/mnt/secrets-store"
               readOnly: true
             {{- end }}
+            {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileShare.create }}
+            - name: beta-secrets-store-inline
+              mountPath: "/mnt/beta-secrets-store"
+              readOnly: true
+            {{- end }}
             {{- if .Values.fileConfig }}
             {{- range $key, $val := .Values.fileConfig }}
             - name: file-config
               mountPath: "/mnt/file-config/{{ $key }}"
+              subPath: {{ $key }}
+              readOnly: true
+            {{- end }}
+            {{- end }}
+            {{- if .Values.canaryDelivery.deployment.fileConfig }}
+            {{- range $key, $val := .Values.canaryDelivery.deployment.fileConfig }}
+            - name: beta-file-config
+              mountPath: "/mnt/beta-file-config/{{ $key }}"
               subPath: {{ $key }}
               readOnly: true
             {{- end }}
@@ -93,41 +105,18 @@ spec:
               readOnly: true
             {{- end }}
             {{- end }}
-            {{- if .Values.fileShare.create }}
-            {{- range $k, $v := .Values.fileShare.folders }}
-            - name: file-azure-{{ $v.name }}
-              csi:
-                driver: file.csi.azure.com
-                readOnly: {{ $v.readOnly }}
-                volumeAttributes:
-                  secretName: {{ include "microservice-chart.fullname" $ }}
-                  shareName: {{ $v.name }}
-                  mountOptions: {{ $v.mountOptions }}
-            {{- end }}
-            {{- end }}
-          {{- end }}
-          volumeMounts:
-            - name: tmp
-              mountPath: /tmp
-            {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileShare.create }}
-            - name: beta-secrets-store-inline
-              mountPath: "/mnt/beta-secrets-store"
-              readOnly: true
-            {{- end }}
-            {{- if .Values.canaryDelivery.deployment.fileConfig }}
-            {{- range $key, $val := .Values.canaryDelivery.deployment.fileConfig }}
-            - name: beta-file-config
-              mountPath: "/mnt/beta-file-config/{{ $key }}"
-              subPath: {{ $key }}
-              readOnly: true
-            {{- end }}
-            {{- end }}
             {{- if .Values.canaryDelivery.deployment.fileConfigExternals.create }}
             {{- range $k, $v := .Values.canaryDelivery.deployment.fileConfigExternals.configMaps }}
             - name: beta-file-config-external-{{ $v.name }}
               mountPath: "/mnt/beta-file-config-external/{{ $v.name }}/{{ $v.key }}"
               subPath: {{ $v.key }}
               readOnly: true
+            {{- end }}
+            {{- end }}
+            {{- if .Values.fileShare.create }}
+            {{- range $k, $v := .Values.fileShare.folders }}
+            - name: file-azure-{{ $v.name }}
+              mountPath: "/mnt/file-azure/{{ $v.name }}"
             {{- end }}
             {{- end }}
             {{- if .Values.canaryDelivery.deployment.fileShare.create }}
@@ -185,6 +174,15 @@ spec:
             {{- end }}
             #external configmap values
             {{- range $key, $valMap := .Values.envConfigMapExternals }}
+            {{- range $internKey, $internVal := $valMap }}
+            - name: {{ $internKey }}
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ $key }}
+                  key: {{ $internVal }}
+            {{- end }}
+            {{- end }}
+            {{- range $key, $valMap := .Values.canaryDelivery.deployment.envConfigMapExternals }}
             {{- range $internKey, $internVal := $valMap }}
             - name: {{ $internKey }}
               valueFrom:
