--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -256,6 +256,18 @@ autoscaling:
   cooldownPeriod: 300 # seconds
   # -- Autoscaling triggers as per [Keda scalers](https://keda.sh/docs/2.6/scalers/)
   triggers: []
+  # -- Autoscaling advanced https://keda.sh/docs/2.9/concepts/scaling-deployments/#advanced
+  advanced: {}
+  #- advanced:
+  #-  restoreToOriginalReplicaCount: false # Optional. Default: false
+  #-  horizontalPodAutoscalerConfig:
+  #-    behavior:
+  #-      scaleDown:
+  #-        stabilizationWindowSeconds: 300
+  #-        policies:
+  #-        - type: Percent
+  #-          value: 100
+  #-          periodSeconds: 15
 
 #
 # Pod identity and KV connection
